fixed compalibility for low version safari

--- a/social-media-dashboard-with-theme-switcher-master/style/style.scss
+++ b/social-media-dashboard-with-theme-switcher-master/style/style.scss
@@ -28,7 +28,6 @@ html{
 body{
     font-family: 'Inter', sans-serif;
     background: getColor(bodyBG);
-    min-height:100vh;
     color:getColor(textLight);
     transition: all 0.5s ease-in-out;
 }
@@ -89,17 +88,17 @@ body{
 }
 .cards-container{
     padding:0 2rem;
-    display:flex;
+    display:grid;
     flex-wrap:wrap;
-    column-gap:3rem;
-    row-gap:2rem;
+    grid-template-columns:repeat(auto-fill,220px);
+    grid-template-rows: auto;
+    grid-column-gap:3rem;
+    grid-row-gap:2rem;
     align-items:center;
     .col{
         padding:3rem;
         position:relative;
         border-radius:5px;
-        flex:20%;
-        min-width:220px;
         display:flex;
         flex-direction:column;
         align-items:center;
@@ -230,6 +229,9 @@ body{
                 background:getColor(mobilebtn);
             }
         }
+    }
+    .cards-container{
+        grid-template-columns:auto;
     }
    
 }
